Support shamrock.ssl.native config to enable ssl in one go without pom.xml settings
    Currently we hard-code the java.library.path so that it works at runtime, but it will
    be better to do some static linking in the future when SVM supports it